Add post about first tutorial launched

--- a/_posts/2022-11-15-v0.2.0-released.md
+++ b/_posts/2022-11-15-v0.2.0-released.md
@@ -7,6 +7,7 @@ tags:
   - core
   - system-test
   - kafka
+  - kafka-streams
 ---
 
 Really happy to announce the v0.2.0 alpha release of Creek is now publicly available on Maven Central! :boom:
