Switch /demos -> /tutorials

--- a/_posts/2022-11-15-v0.2.0-released.md
+++ b/_posts/2022-11-15-v0.2.0-released.md
@@ -15,12 +15,12 @@ This may only be an alpha release, but it's the first public release and therefo
 
 The _core_ and _system-test_ functionality is getting close. At the moment, the _Kafka_ side only supports records 
 with basic key and value types, like `long`, `String` and `double`. While this is pretty limiting, it's enough to 
-allow us to throw together some initial tutorials / demos. These demos are what we'll be focusing on next, along 
+allow us to throw together some initial tutorials. These tutorials are what we'll be focusing on next, along 
 with switching the existing GitHub based docs over to this site. 
 
-Once a demo or two have been knocked out, giving people a taste of what Creek is all about, work will pivot back to 
+Once a tutorial or two have been knocked out, giving people a taste of what Creek is all about, work will pivot back to 
 those outstanding big ticket items. Items like [JSON support](https://github.com/creek-service/creek-kafka/issues/25)
 and [Windowed key support](https://github.com/creek-service/creek-kafka/issues/43). These will really open Creek up
 to real world applications.
 
-We'll post again when those demos go live...
+We'll post again when those tutorials go live...
