Initial drop of new branding.

--- a/_posts/2023-01-30-v0.3.1-released.md
+++ b/_posts/2023-01-30-v0.3.1-released.md
@@ -4,11 +4,8 @@ categories:
  - releases
  
 tags:
-  - core
-  - system-test
-  - kafka
-  - kafka-streams
   - dependencies
+  - vulnerabilities
 ---
 
 The v0.3.1 patch release of Creek is now publicly available on Maven Central.
