SEO - add page descriptions
...to improve SEO

--- a/_posts/2022-11-15-v0.2.0-released.md
+++ b/_posts/2022-11-15-v0.2.0-released.md
@@ -1,5 +1,6 @@
 ---
 title: v0.2.0 preview release is available
+description: We're proud to announce the v0.2.0 preview release of Creek, containing a solid set of core, system test and Kafka features 
 categories:
  - releases
  
