--- a/_posts/2023-01-12-v0.3.0-released.md
+++ b/_posts/2023-01-12-v0.3.0-released.md
@@ -1,5 +1,6 @@
 ---
 title: v0.3.0 preview release is available
+description: "We're proud to announce the v0.3.0 preview release of Creek, which brings code coverage for system testing: capture coverage metrics from Docker containers"
 categories:
  - releases
  
