--- a/_posts/2023-02-16-v0.3.2-released.md
+++ b/_posts/2023-02-16-v0.3.2-released.md
@@ -1,5 +1,6 @@
 ---
 title: v0.3.2 preview release is available
+description: We're proud to announce the v0.3.2 preview release of Creek, containing a few dependency updates to address security vulnerabilities
 categories:
  - releases
  
