--- a/_posts/2023-03-14-v0.4.0-released.md
+++ b/_posts/2023-03-14-v0.4.0-released.md
@@ -10,7 +10,7 @@ tags:
   - debugging
 ---
 
-The v0.4.0 patch release of Creek is now publicly available on Maven Central and the Gradle plugin portal.
+The v0.4.0 minor release of Creek is now publicly available on Maven Central and the Gradle plugin portal.
 
 The highlights of this minor release are:
 
